@@ -1,3 +1,9 @@
+Thu Oct 14 10:08:58 1999  Gray Watson  <gray@burger.256.com>
+
+	* Releasing dmalloc version 4.3.0 beta 3.
+
+	* Darn.  Missed malloc.h in the port file.
+
 Wed Oct 13 18:38:26 1999  Gray Watson  <gray@burger.256.com>
 
 	* Releasing dmalloc version 4.3.0 beta 2.
@@ -1483,5 +1489,5 @@ Thu Mar 12 19:28:34 1992  Gray Watson  (gray@toaster.antaire.com)
 	* Started ChangeLog.
 
 -------------------------------------------------------------------------------
-$Id: ChangeLog,v 1.224 1999/10/13 22:41:14 gray Exp $
+$Id: ChangeLog,v 1.225 1999/10/14 14:09:34 gray Exp $
 -------------------------------------------------------------------------------
